--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav{
   width: 100%;
-  background: #000;
+  background: #6c63ff;
 }
 
 nav ul{
@@ -24,6 +25,7 @@ nav ul li{
 nav ul li .btnaddt{
   margin: auto 10px;
   padding: 10px 40px;
+  background: #f9f9f9;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -34,20 +36,40 @@ nav ul li .btnaddt{
 
 .blocoContainer{
   width: 96%;
-  margin: auto;
+  margin: 10px auto;
   display: flex;
 }
 
 .blocoContainer .blocoContent{
   width: 24%;
-  background: #f86;
+  background: #6c63ff26;
   margin: 3px 5px;
   padding: 10px 5px 50px 5px;
   border-radius: 6px;
 }
 
-.blocoContainer .blocoContent .tesk{
-  padding: 30px 0;
+
+
+.blocoContent .task{
+  padding: 10px 5px;
+  margin-top: 20px;
   background-color: #fff;
   border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.blocoContent .task + .task{
+  margin: 8px auto;
+}
+.blocoContent .task h3{
+  margin-bottom: 8px;
+}
+.blocoContent .task p{
+  font-size: 14px;
+}
+.blocoContent .close{
+  float: right;
+  padding: 1px 9px;
+  font-size: 16px;
+  border-radius: 3px;
+  border: none;
 }
